[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Map/Walls.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Map/Floor.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Objects/LavaLamp.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Doors/TopDoor.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Rooms/Door.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Doors/LeftDoor.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Doors/DownDoor.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Doors/RightDoor.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.3125, 7 )

[node name="SpawnRoom" type="Node2D"]
script = ExtResource( 5 )

[node name="Area2D" type="StaticBody2D" parent="."]
z_index = 2
collision_mask = 275

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 144, 176, 144, 172.25, 4.5, 172.25, 4.47571, 100.877, 0.827713, 100.597, 0, 176 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( -0.294746, 75.3413, 0, 0, 144, 0, 144, 16, 4.25, 15.75, 4.47571, 75.3413 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 0, 0.280624 )
polygon = PoolVector2Array( 176, 0, 176.5, 16.5, 315, 15.75, 315.958, 74.4995, 319.606, 74.7801, 320, 0 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Area2D"]
z_index = 1
polygon = PoolVector2Array( 315.117, 101.719, 315, 172.25, 176.25, 172, 176, 176, 320, 176, 320, 176, 319.887, 101.439 )

[node name="Tileset" type="Node2D" parent="."]

[node name="Walls" parent="Tileset" instance=ExtResource( 1 )]
tile_data = PoolIntArray( -65516, 1, 0, 0, 1, 524290, 1, 1, 655363, 2, 1, 655363, 3, 1, 655363, 4, 1, 655363, 5, 1, 655363, 6, 1, 655363, 7, 1, 655363, 8, 1, 65538, 9, 1, 262145, 10, 1, 262145, 11, 1, 65539, 12, 1, 655363, 13, 1, 655363, 14, 1, 655363, 15, 1, 655363, 16, 1, 327684, 17, 1, 655363, 18, 1, 655363, 19, 1, 524291, 65536, 1, 524289, 65546, 1, 262145, 65555, 1, 524288, 131072, 1, 524289, 131082, 1, 262145, 131091, 1, 524288, 196608, 1, 524289, 196627, 1, 524288, 262144, 1, 524289, 262163, 1, 524288, 393216, 1, 524289, 393235, 1, 524288, 458752, 1, 524289, 458771, 1, 524288, 524288, 1, 524289, 524307, 1, 524288, 589824, 1, 524289, 589843, 1, 524288, 655360, 1, 589826, 655361, 1, 458754, 655362, 1, 458754, 655363, 1, 458754, 655364, 1, 458754, 655365, 1, 458754, 655366, 1, 458754, 655367, 1, 458754, 655368, 1, 458755, 655371, 1, 458754, 655372, 1, 458754, 655373, 1, 458754, 655374, 1, 458754, 655375, 1, 458754, 655376, 1, 458754, 655377, 1, 458754, 655378, 1, 458754, 655379, 1, 524292 )

[node name="Floor" parent="Tileset" instance=ExtResource( 2 )]
tile_data = PoolIntArray( 65536, 1, 262145, 65537, 1, 262145, 65538, 1, 262145, 65539, 1, 262145, 65540, 1, 262145, 65541, 1, 262145, 65542, 1, 262145, 65543, 1, 262146, 65544, 1, 262145, 65545, 1, 262145, 65546, 1, 262145, 65547, 1, 262145, 65548, 1, 262145, 65549, 1, 262145, 65550, 1, 262145, 65551, 1, 262145, 65552, 1, 393220, 65553, 1, 262145, 65554, 1, 262145, 65555, 1, 262145, 131072, 1, 262145, 131073, 1, 262145, 131074, 1, 327682, 131075, 1, 327682, 131076, 1, 262145, 131077, 1, 327682, 131078, 1, 262145, 131079, 1, 262145, 131080, 1, 262145, 131081, 1, 262145, 131082, 1, 262145, 131083, 1, 262145, 131084, 1, 262145, 131085, 1, 262146, 131086, 1, 262145, 131087, 1, 262145, 131088, 1, 262145, 131089, 1, 262145, 131090, 1, 262145, 131091, 1, 262145, 196608, 1, 262145, 196609, 1, 262145, 196610, 1, 262145, 196611, 1, 262145, 196612, 1, 327681, 196613, 1, 262145, 196614, 1, 262145, 196615, 1, 262145, 196616, 1, 262145, 196617, 1, 262146, 196618, 1, 262145, 196619, 1, 262145, 196620, 1, 262145, 196621, 1, 262145, 196622, 1, 262145, 196623, 1, 262146, 196624, 1, 262145, 196625, 1, 262145, 196626, 1, 262145, 196627, 1, 262145, 262144, 1, 262145, 262145, 1, 262145, 262146, 1, 262145, 262147, 1, 327682, 262148, 1, 262145, 262149, 1, 262145, 262150, 1, 262145, 262151, 1, 262145, 262152, 1, 327682, 262153, 1, 262145, 262154, 1, 262145, 262155, 1, 262145, 262156, 1, 327681, 262157, 1, 262145, 262158, 1, 262145, 262159, 1, 262145, 262160, 1, 262145, 262161, 1, 262145, 262162, 1, 262145, 262163, 1, 262145, 327680, 1, 262145, 327681, 1, 262146, 327682, 1, 262145, 327683, 1, 262145, 327684, 1, 262145, 327685, 1, 262145, 327686, 1, 327683, 327687, 1, 327682, 327688, 1, 262145, 327689, 1, 262145, 327690, 1, 262145, 327691, 1, 262145, 327692, 1, 262145, 327693, 1, 262145, 327694, 1, 262145, 327695, 1, 262145, 327696, 1, 262145, 327697, 1, 262145, 327698, 1, 262145, 327699, 1, 327683, 393216, 1, 262145, 393217, 1, 262145, 393218, 1, 262145, 393219, 1, 262145, 393220, 1, 262146, 393221, 1, 262145, 393222, 1, 262145, 393223, 1, 393218, 393224, 1, 262145, 393225, 1, 262146, 393226, 1, 262145, 393227, 1, 262145, 393228, 1, 262145, 393229, 1, 262145, 393230, 1, 262146, 393231, 1, 262145, 393232, 1, 262145, 393233, 1, 262145, 393234, 1, 262145, 393235, 1, 262145, 458752, 1, 262145, 458753, 1, 262145, 458754, 1, 327681, 458755, 1, 262145, 458756, 1, 262145, 458757, 1, 262145, 458758, 1, 262145, 458759, 1, 262145, 458760, 1, 262145, 458761, 1, 262145, 458762, 1, 262145, 458763, 1, 262145, 458764, 1, 262145, 458765, 1, 262145, 458766, 1, 327683, 458767, 1, 327681, 458768, 1, 262145, 458769, 1, 327682, 458770, 1, 262145, 458771, 1, 262145, 524288, 1, 262145, 524289, 1, 262145, 524290, 1, 262145, 524291, 1, 262145, 524292, 1, 327682, 524293, 1, 262145, 524294, 1, 327682, 524295, 1, 262145, 524296, 1, 262145, 524297, 1, 262145, 524298, 1, 262145, 524299, 1, 262145, 524300, 1, 262145, 524301, 1, 262145, 524302, 1, 262145, 524303, 1, 393218, 524304, 1, 262145, 524305, 1, 262145, 524306, 1, 262145, 524307, 1, 262145, 589824, 1, 262145, 589825, 1, 262145, 589826, 1, 262145, 589827, 1, 262145, 589828, 1, 393217, 589829, 1, 262145, 589830, 1, 262145, 589831, 1, 262145, 589832, 1, 262145, 589833, 1, 262145, 589834, 1, 262145, 589835, 1, 262146, 589836, 1, 262145, 589837, 1, 327681, 589838, 1, 327683, 589839, 1, 262145, 589840, 1, 262145, 589841, 1, 262145, 589842, 1, 262145, 589843, 1, 262145, 655360, 1, 262145, 655361, 1, 262145, 655362, 1, 262145, 655363, 1, 262145, 655364, 1, 262145, 655365, 1, 262145, 655366, 1, 262145, 655367, 1, 262145, 655368, 1, 262145, 655369, 1, 262145, 655370, 1, 262145, 655371, 1, 262145, 655372, 1, 262145, 655373, 1, 262145, 655374, 1, 262145, 655375, 1, 262145, 655376, 1, 262145, 655377, 1, 262145, 655378, 1, 262145, 655379, 1, 262145 )

[node name="TopDoor" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="TopDoor" index="0"]
shape = SubResource( 1 )

[node name="LeftDoor" parent="." instance=ExtResource( 6 )]

[node name="RightDoor" parent="." instance=ExtResource( 8 )]

[node name="DownDoor" parent="." instance=ExtResource( 7 )]

[node name="YSort" type="YSort" parent="."]

[node name="Torch" parent="." instance=ExtResource( 3 )]
position = Vector2( 104, 8 )

[node name="Torch2" parent="." instance=ExtResource( 3 )]
position = Vector2( 216, 8 )

[editable path="TopDoor"]
[editable path="LeftDoor"]
[editable path="RightDoor"]
[editable path="DownDoor"]
